# opencl_demo

./: CMakeLists.txt  forTest.cl  main_demo.cpp
cmake/: FindOpenCL.cmake
